# finrl-a-deep-reinforcement-learning-library-for-automated-st

./: CLAUDE.md  README.md  pyproject.toml
docs/: open_questions.md  reward_function_design.md
reports/cycle_2/: metrics.json  technical_findings.md
reports/cycle_3/: metrics.json  technical_findings.md
reports/cycle_5/: cost_comparison.json  metrics.json  technical_findings.md
reports/cycle_7/: best_params.json  metrics.json  performance_comparison.md  study.db  technical_findings.md
scripts/: tune_hyperparameters.py
src/: backtest.py  baselines.py  environment.py  preprocess.py  run_cost_analysis.py  run_single_backtest.py  run_walk_forward.py
src/agents/: ppo_agent.py
src/data/: processor.py
